# alshicrypt

./: .gitignore  README.md  pyproject.toml
alshicrypt/: __init__.py  characters.py  cipher.py  datasets.py  generator.py  model.py  runtime.py  trainer.py
paper/: README.tex
tests/: test_runtime.py
