[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alshicrypt"
version = "0.1.0"
description = "Learned character-permutation cipher (encoder/decoder) in PyTorch"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Samuel Cavazos" }]
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/Alshivals-Data-Service/alshicrypt"
Issues = "https://github.com/Alshivals-Data-Service/alshicrypt/issues"

[tool.setuptools]
packages = ["alshicrypt"]  # flat layout at repo root

[project.scripts]
alshicrypt-generate = "alshicrypt.generator:main"   # CLI
